--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<style>
+		<title>大学生互联网防骗指南</title>
+		<link rel="stylesheet" type="text/css" href="./css/new_file.css"/>
+		<style type="text/css">
 			html,body{
-				width: 100%;
-				height: 100%;
+				width: 1600px;
+				height: 900px;
 				margin: 0;
 				padding: 0;
 			}
 		</style>
-		<title>大学生互联网防骗指南</title>
-		<link rel="stylesheet" type="text/css" href="./css/new_file.css"/>
 	</head>
-	<body>
+	<body background="./img/index.png" style="background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%; ">
 		<div class="div1">
-			<img src="./img/index.png" class="index">
 			<div class="div2">
-				<img src="./img/button1.png" class="btn1">
+				<input type="image" src="./img/button1.png">
 			</div>
 		</div>
 	</body>
