--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 				padding: 0;
 			}
 		</style>
+		<script type="text/javascript">
+			function btnAction(){
+				window.location.href = 'https://www.baidu.com/'
+			}
+		</script>
 	</head>
 	<body background="./img/index.png" style="background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%; ">
 		<div class="div1">
-			<div class="div2">
-				<input type="image" src="./img/button1.png">
-			</div>
+			<input type="image" src="./img/button1.png" onclick="btnAction()">
 		</div>
 	</body>
 </html>
