--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		</style>
 		<script type="text/javascript">
 			function btnAction(){
-				window.location.href = 'https://www.baidu.com/'
+				window.location.href = '../../fangzhapian/navigation/navigation.html'
 			}
 		</script>
 	</head>
 	<body background="./img/index.png" style="background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%; ">
 		<div class="div1">
-			<input type="image" src="./img/button1.png" onclick="btnAction()">
+			<input type="image" src="./img/button1.png" onclick="btnAction()" class="input1">
 		</div>
 	</body>
 </html>
